--- a/app/templates/admin/insert.html
+++ b/app/templates/admin/insert.html
@@ -20,17 +20,17 @@
 
 <div class="col-md-8">
   <div class="bg-dark py-2 px-2 btn-group-lg mt-4 box rounded-2 opacity-75" data-bs-theme="dark" role="group" style="text-align:center" aria-label="Basic mixed styles example">
-    <a type="button" class="btn btn-outline-success py-1 px-1 col-3" href="{{url_for('insert')}}">Crear</a>
-    <a type="button" class="btn btn-outline-warning py-1 px-1 col-3" href="{{url_for('update')}}">Actualizar</a>
-    <a type="button" class="btn btn-outline-danger py-1 px-1 col-3" href="{{url_for('delete')}}">Eliminar</a>
+    <a type="button" class="btn btn-outline-success py-1 px-1 col-3" href="{{url_for('agenda.insert')}}">Crear</a>
+    <a type="button" class="btn btn-outline-warning py-1 px-1 col-3" href="{{url_for('agenda.update')}}">Actualizar</a>
+    <a type="button" class="btn btn-outline-danger py-1 px-1 col-3" href="{{url_for('agenda.delete')}}">Eliminar</a>
   </div>
 
 <div>
 <!-- tabla para mostrar los contactos -->
 <br>
   <div class="bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
-    <form action="{{ url_for('insert') }}" method="POST">
-      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+    <form action="{{ url_for('agenda.insert') }}" method="POST">
+      <!-- <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"> -->
       <table border="1" class="table table-striped table-dark table-hover">
           <thead>
               <tr>
