--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="{{ url_for('static',filename='star.png')}}" type="image/png">
+    <link rel="icon" href="{{ url_for('static',filename='img/star.png')}}" type="image/png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactos</title>
     <!-- Bootstrap 5x-->
-    <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap.min.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css')}}">
     
     <!-- Custom CSS-->
-    <link rel="stylesheet" href="{{ url_for('static',filename='main.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css')}}">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary opacity-100" data-bs-theme="dark">
@@ -23,12 +23,6 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Contactos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{url_for('calendario', year=2024, month=1)}}">Calendario</a> <!-- IMPORTANTE, aqui solo llama la ruta, dentro del archivo index.py esta definida la ruta de la ruta-->
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{url_for('login')}}">login</a>
           </li>
             </ul>
           </li>
