Se realizan los siguientes cambios " - el archivo restart, se desactiva el prune para evitar descargar las imagenes base de manera recurrente - en el archivo contacts_db.py, se agregan 2 lineas que permiten localizar al archivo agenda.csv - en el archivo agenda.py se cambian varias variables para evitar que sean reconocidas por python como archivos diferente (de query a search_query)

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -17,6 +17,7 @@
         </fieldset>
       </form>
   </div>
+  
 </div>
 
 <div class="col-md-8">
@@ -42,7 +43,7 @@
               </tr>
           </thead>
           <tbody style="text-align:left">
-              {% for row in frontquery %}
+              {% for row in frontq %}
                   <tr>
                       <td scope="row">{{ row[0] }}</td>
                       <td scope="row">{{ row[1] }}</td>
