--- a/src/app/templates/admin/update.html
+++ b/src/app/templates/admin/update.html
@@ -7,7 +7,7 @@
 <!-- jumbotrom con titulos y asi -->
 <div class="bg-dark text-light py-3 px-3 box rounded-2 m-3 opacity-75" data-bs-theme="dark">
     <h1 class="display-4 text-warning">Agenda de contactos</h1>
-    <form class="d-flex" role="search" method="GET" action="{{url_for('agenda.update')}}">
+    <form class="d-flex" role="search" method="GET" action="{{url_for('admin.update')}}">
         <fieldset>
           <legend class="text-warning">Busqueda!</legend>
           <div class="mb-3">
@@ -22,15 +22,15 @@
 
 <div class="col-md-8">
   <div class="bg-dark py-2 px-2 btn-group-lg mt-4 box rounded-2 opacity-75" data-bs-theme="dark" role="group" style="text-align:center" aria-label="Basic mixed styles example">
-    <a type="button" class="btn btn-outline-success py-1 px-1 col-3" href="{{url_for('agenda.insert')}}">Crear</a>
-    <a type="button" class="btn btn-outline-warning py-1 px-1 col-3" href="{{url_for('agenda.update')}}">Actualizar</a>
-    <a type="button" class="btn btn-outline-danger py-1 px-1 col-3" href="{{url_for('agenda.delete')}}">Eliminar</a>
+    <a type="button" class="btn btn-outline-success py-1 px-1 col-3" href="{{url_for('admin.insert')}}">Crear</a>
+    <a type="button" class="btn btn-outline-warning py-1 px-1 col-3" href="{{url_for('admin.update')}}">Actualizar</a>
+    <a type="button" class="btn btn-outline-danger py-1 px-1 col-3" href="{{url_for('admin.delete')}}">Eliminar</a>
   </div>
 
 <div class="scrollable-table">
 <!-- tabla para mostrar los contactos -->
   <div class="bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
-    <form method="POST" action="{{ url_for('agenda.update') }}"> <!-- Formulario para enviar los datos -->
+    <form method="POST" action="{{ url_for('admin.update') }}"> <!-- Formulario para enviar los datos -->
       <table border="1" class="table table-striped table-dark table-hover">
           <thead>
               <tr>
