se renombran varios archivos, principalmente index que ahora pasa a ser root esto para agregar mayor coherencia en el codigo (agregando nombres en español e ingles que va) adicional:
- se inicia la creacion de los archivos que crearan la base de datos de los cuentos
- pero estos estan dando problemas, sospecho que por el formato del csv con lo cual estoy pensando en alternativas:

-- ingresar solo los primeros datos y el cuento en si, ingresarlo o desde texto o desde una interface de actualizacion

en fin, ya veremos mañana, con este archivo correctamente creado, hara falta crear una interface y ya por ahi se puede avanzar

--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('index.inicio')}}">Home</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('root.home')}}">Home</a>
           </li>
             </ul>
           </li>
