--- a/src/app/templates/home/home.html
+++ b/src/app/templates/home/home.html
@@ -1,6 +1,59 @@
 {%extends "layout.html"%}
 
 {%block content%}
+<br>
+<div class="row">
+    <div class="col-md-3">
+        <div class="bg-dark text-light py-3 px-3 box rounded-2 opacity-75" data-bs-theme="dark">
+            <h1 class="display-6">Articulos del Blog</h1>
+            <hr>
+            <form class="d-flex" role="search" method="GET" action="#">
+                <fieldset>
+                    <legend>Busqueda!</legend>
+                    <div class="mb-3">
+                        <label for="TextInput" class="form-label">Escriba un titulo para empezar a buscar:</label>
+                        <input type="search" name="query" id="TextInput" class="form-control me-2" placeholder="Nombre/Apellido">
+                    </div>
+                    <button type="submit" class="btn btn-outline-primary py-2 px-2 col-12">Buscar...</button>
+                </fieldset>
+            </form>
+            <hr>
+            <div class="col-md-12">
+                <h4 class="display-8 text-center">Administracion de Articulos</h4>
+                <div class="bg-dark py-2 px-2 mt-1 box rounded-2 opacity-75" data-bs-theme="dark">
+                    <a type="button" class="btn btn-outline-success py-2 px-2 col-11 mb-2" href="#">Crear Articulo</a>
+                    <a type="button" class="btn btn-outline-warning py-2 px-2 col-12 mb-2" href="#">Actualizar Articulo</a>
+                    <a type="button" class="btn btn-outline-danger py-2 px-2 col-12 mb-2" href="#">Borrar Articulo</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
-
+    <!-- Tabla -->
+    <div class="col-md-9 scrollable-table">
+        <div class="bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
+            <table border="1" class="table table-striped table-dark table-hover">
+                <h1 class="display-6" style="text-align: center;">Articulos Existentes</h1>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Titulo</th>
+                        <th>Categoria</th>
+                        <th>Autor</th>
+                    </tr>
+                </thead>
+                <tbody style="text-align:left">
+                    {% for row in frontblog %}
+                        <tr>
+                            <td scope="row">{{ row[0] }}</td>
+                            <td scope="row">{{ row[1] }}</td>
+                            <td scope="row">{{ row[2] }}</td>
+                            <td scope="row">{{ row[3] }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 {%endblock%}
