--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -15,7 +15,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary opacity-100" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Python WebApp</a>
+      <a class="navbar-brand" href="/">Playgrounds WebApp</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
