--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css')}}">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary opacity-100" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary opacity-75" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Playgrounds WebApp</a>
+      <a class="navbar-brand" href="/">Python WebApp</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
