par de cambios por aqui y por alla

--- a/src/app/templates/admin/index.html
+++ b/src/app/templates/admin/index.html
@@ -6,7 +6,7 @@
 <!-- jumbotrom con titulos y asi -->
 <div class="bg-dark text-light py-3 px-3 box rounded-2 m-3 opacity-75" data-bs-theme="dark">
     <h1 class="display-4">Agenda de contactos</h1>
-    <form class="d-flex" role="search" method="GET" action="{{url_for('root.index')}}">
+    <form class="d-flex" role="search" method="GET" action="{{url_for('root.home')}}">
         <fieldset>
           <legend>Busqueda!</legend>
           <div class="mb-3">
