--- a/src/app/templates/blog/home.html
+++ b/src/app/templates/blog/home.html
@@ -46,7 +46,7 @@
                     {% for row in frontblog %}
                         <tr>
                             <td scope="row">{{ row[0] }}</td>
-                            <td scope="row">{{ row[1] }}</td>
+                            <td scope="row"><a class="text-light" href="#">{{ row[1] }}</a></td>
                             <td scope="row">{{ row[2] }}</td>
                             <td scope="row">{{ row[3] }}</td>
                         </tr>
