- se creo la ruta dinamica con la cual se mostraran los articulos - se comienza a trabajar en el crud de los articulos - se trabaja el delete, pero el boton de eliminar esta mal ubicado.   debe arreglarse - se crea, plantillas html para agregar y editar articulos, pero Falta: - en el insert, falta agregar la ruta y verificar que se haga la insercion   correctamente - en la ruta de editar falta modificar la plantilla, ya que es similar a   la de home, con lo cual hay que crear otras 2 rutas, una para gestionar   el update, y otro que redireccione a la respectiva ruta dinamica y en esa   pantalla se pueda actualizar - falta agregar la operacion de update en models

--- a/src/app/templates/blog/update.html
+++ b/src/app/templates/blog/update.html
@@ -5,13 +5,13 @@
 <div class="row">
     <div class="col-md-3">
         <div class="bg-dark text-light py-3 px-3 box rounded-2 opacity-75" data-bs-theme="dark">
-            <h1 class="display-6">Articulos del Blog</h1>
+            <h1 class="display-6">Editar un Articulo</h1>
             <hr>
             <form class="d-flex" role="search" method="GET" action="{{url_for('root.home')}}">
                 <fieldset>
                     <legend>Busqueda!</legend>
                     <div class="mb-3">
-                        <label for="TextInput" class="form-label">Escriba un titulo para empezar a buscar:</label>
+                        <label for="TextInput" class="form-label">Escriba el titulo del articulo que quiera editar:</label>
                         <input type="search" name="query" id="TextInput" class="form-control me-2" placeholder="Titulo del Articulo">
                     </div>
                     <button type="submit" class="btn btn-outline-primary py-2 px-2 col-12 mb3">Buscar...</button>
