--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="{{ url_for('static',filename='img/star.png')}}" type="image/png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactos</title>
+    <title>Playgrounds Blog!</title>
     <!-- Bootstrap 5x-->
     <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css')}}">
     
