--- a/src/app/templates/blog/insert.html
+++ b/src/app/templates/blog/insert.html
@@ -11,7 +11,7 @@
                 <h4 class="display-8 text-center">Administracion de Articulos</h4>
                 <div class="bg-dark py-2 px-2 mt-1 box rounded-2 opacity-75" data-bs-theme="dark">
                     <a type="button" class="btn btn-outline-success py-2 px-2 col-12 mb-3" href="{{url_for('root.insert')}}">Crear Articulo</a>
-                    <a type="button" class="btn btn-outline-warning py-2 px-2 col-12 mb-3" href="#">Actualizar Articulo</a>
+                    <a type="button" class="btn btn-outline-warning py-2 px-2 col-12 mb-3" href="{{url_for('root.edit')}}">Editar Articulo</a>
                     <a type="button" class="btn btn-outline-danger py-2 px-2 col-12 mb-3" href="{{url_for('root.delete')}}">Borrar Articulo</a>
                 </div>
             </div>
