- Se borran referencias a agenda - se modifica ruta root a admin - se renombra bd a blog.db - se refactoriza aplicacion - run.py -> app -> routes                 -> models - se cambian las tablas para hacer solo lo interno, scrolleable - se agrega br a layout para que tabla y panel no esten pegados

--- a/src/app/templates/admin/404.html
+++ b/src/app/templates/admin/404.html
@@ -4,7 +4,7 @@
 
 <div class="bg-dark text-light p-5 box rounded-2 m-3 opacity-50" data-bs-theme="dark">
     <h1 class="display-4">El articulo no existe</h1>
-    <a class="btn btn-outline-primary btn-lg" href="{{url_for('root.home')}}" role="button">Regresar</a>
+    <a class="btn btn-outline-primary btn-lg" href="{{url_for('admin.home')}}" role="button">Regresar</a>
   </div>
 
 
