--- a/src/app/templates/admin/article.html
+++ b/src/app/templates/admin/article.html
@@ -7,7 +7,7 @@
     <p class="lead">{{ article[2] }}, {{ article[3] }}</p>
     <hr class="my-4">
     <p>{{ article[4] }}</p>
-    <a class="btn btn-outline-primary btn-lg" href="{{url_for('root.home')}}" role="button">Regresar</a>
+    <a class="btn btn-outline-primary btn-lg" href="{{url_for('admin.home')}}" role="button">Regresar</a>
   </div>
 
 
