--- a/src/app/templates/admin/delete.html
+++ b/src/app/templates/admin/delete.html
@@ -2,67 +2,42 @@
 
 {%block content%}
 
-  <div class="row">
-    <div class="col-md-4">
-<!-- jumbotrom con titulos y asi -->
-<div class="bg-dark text-light py-3 px-3 box rounded-2 m-3 opacity-75" data-bs-theme="dark">
-    <h1 class="display-4 text-danger">Agenda de contactos</h1>
-    <form class="d-flex" role="search" method="GET" action="{{url_for('admin.delete')}}">
-        <fieldset>
-          <legend class="text-danger">Busqueda!</legend>
-          <div class="mb-3">
-            <label for="TextInput" class="form-label text-danger">Escriba un nombre que quieras borrar:</label>
-            <input type="search" name="query" id="TextInput" class="form-control me-2" placeholder="Nombre / Apellido">
-          </div>
-          <button type="submit" class="btn btn-outline-primary">Buscar...</button>
-        </fieldset>
-      </form>
-  </div>
+<div class="row">
+
+{% include "search_panel.html" %}
+
+    <div class="col-md-8 bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
+        <h1 class="display-6 text-light">Listado de Articulos Existentes</h1>
+        <!-- tabla para mostrar los contactos -->
+          <div class="scrollable-table">
+            <form method="POST" action="{{ url_for('admin.delete') }}"> <!-- Formulario para enviar los datos -->
+              <table border="1" class="table table-striped table-dark table-hover">
+                  <thead>
+                      <tr>
+                          <th>ID</th>
+                          <th>Titulo</th>
+                          <th>Categoria</th>
+                          <th>Autor</th>
+                          <!-- Añade más columnas según tu tabla -->
+                      </tr>
+                  </thead>
+                  <tbody style="text-align:left">
+                      {% for row in frontquery %}
+                          <tr>
+                            <td><input class="form-check-input" type="checkbox" name="ext" value="{{ row[0] }}"></td> <!-- Checkbox -->
+                              <td scope="row">{{ row[1] }}</td>
+                              <td scope="row">{{ row[2] }}</td>
+                              <td scope="row">{{ row[3] }}</td>
+                              <!-- Añade más columnas según tu tabla -->
+                          </tr>
+                      {% endfor %}
+                  </tbody>
+              </table>
+        </div>
+        <br>
+        <button type="submit" class="btn btn-danger col-md-4 justify-content-left">Eliminar Articulos Seleccionados</button> <!-- Botón de envío -->
+    </form>
+    </div>
 </div>
-
-<div class="col-md-8">
-  <div class="bg-dark py-2 px-2 btn-group-lg mt-4 box rounded-2 opacity-75" data-bs-theme="dark" role="group" style="text-align:center" aria-label="Basic mixed styles example">
-    <a type="button" class="btn btn-outline-success py-1 px-1 col-3" href="{{url_for('admin.insert')}}">Crear</a>
-    <a type="button" class="btn btn-outline-warning py-1 px-1 col-3" href="{{url_for('admin.update')}}">Actualizar</a>
-    <a type="button" class="btn btn-outline-danger py-1 px-1 col-3" href="{{url_for('admin.delete')}}">Eliminar</a>
-  </div>
-
-<div class="scrollable-table">
-<!-- tabla para mostrar los contactos -->
-  <div class="bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
-    <form method="POST" action="{{ url_for('admin.delete') }}"> <!-- Formulario para enviar los datos -->
-      <table border="1" class="table table-striped table-dark table-hover">
-          <thead>
-              <tr>
-                  <th>Ext</th>
-                  <th>Usuario</th>
-                  <th>Correo</th>
-                  <th>Telefono</th>
-                  <th>Regional</th>
-                  <th>Departamento</th>
-                  <!-- Añade más columnas según tu tabla -->
-              </tr>
-          </thead>
-          <tbody style="text-align:left">
-              {% for row in frontquery %}
-                  <tr>
-                    <td><input class="form-check-input" type="checkbox" name="ext" value="{{ row[0] }}"></td> <!-- Checkbox -->
-                      <td scope="row">{{ row[1] }}</td>
-                      <td scope="row">{{ row[2] }}</td>
-                      <td scope="row">{{ row[3] }}</td>
-                      <td scope="row">{{ row[4] }}</td>
-                      <td scope="row">{{ row[5] }}</td>
-                      <!-- Añade más columnas según tu tabla -->
-                  </tr>
-              {% endfor %}
-          </tbody>
-      </table>
-   </div>
-  </div>
-  <br>
-  <button type="submit" class="btn btn-danger">Eliminar Contactos Seleccionados</button> <!-- Botón de envío -->
-  </form>
- </div>
-</div>
-
-{%endblock%}
+<br>
+{% endblock %}
