--- a/src/app/templates/admin/edit.html
+++ b/src/app/templates/admin/edit.html
@@ -1,16 +1,16 @@
 {%extends "layout.html"%}
 
 {%block content%}
-<br>
+
 <div class="row">
 
     {% include "search_panel.html" %}
 
     <!-- Tabla -->
-    <div class="col-md-9 scrollable-table">
+    <div class="col-md-9">
         <div class="bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
             <h1 class="display-6 text-center">Articulos Existentes</h1>
-            <div class="table-responsive">
+            <div class="scrollable-table table-responsive">
                 <table border="1" class="table table-striped table-dark table-hover">
                     <thead>
                         <tr>
@@ -24,7 +24,7 @@
                         {% for row in frontblog %}
                             <tr>
                                 <td scope="row">{{ row[0] }}</td>
-                                <td scope="row"><a class="text-warning" href="{{ url_for('root.edit_story', article_id=row[0]) }}">{{ row[1] }}</a></td>
+                                <td scope="row"><a class="text-warning" href="{{ url_for('admin.edit_story', article_id=row[0]) }}">{{ row[1] }}</a></td>
                                 <td scope="row">{{ row[2] }}</td>
                                 <td scope="row">{{ row[3] }}</td>
                             </tr>
