--- a/src/app/templates/admin/edit_full.html
+++ b/src/app/templates/admin/edit_full.html
@@ -1,7 +1,7 @@
 {%extends "layout.html"%}
 
 {%block content%}
-<br>
+
 <div class="row">
     <div class="col-md-3">
         <div class="bg-dark text-light py-3 px-3 box rounded-2 opacity-75" data-bs-theme="dark">
@@ -10,9 +10,9 @@
             <div class="col-md-12">
                 <h4 class="display-8 text-center">Administracion de Articulos</h4>
                 <div class="bg-dark py-2 px-2 mt-1 box rounded-2 opacity-75" data-bs-theme="dark">
-                    <a type="button" class="btn btn-outline-success py-2 px-2 col-12 mb-3" href="{{url_for('root.insert')}}">Crear Articulo</a>
-                    <a type="button" class="btn btn-outline-warning py-2 px-2 col-12 mb-3" href="{{url_for('root.edit')}}">Editar Articulo</a>
-                    <a type="button" class="btn btn-outline-danger py-2 px-2 col-12 mb-3" href="{{url_for('root.delete')}}">Borrar Articulo</a>
+                    <a type="button" class="btn btn-outline-success py-2 px-2 col-12 mb-3" href="{{url_for('admin.insert')}}">Crear Articulo</a>
+                    <a type="button" class="btn btn-outline-warning py-2 px-2 col-12 mb-3" href="{{url_for('admin.edit')}}">Editar Articulo</a>
+                    <a type="button" class="btn btn-outline-danger py-2 px-2 col-12 mb-3" href="{{url_for('admin.delete')}}">Borrar Articulo</a>
                 </div>
             </div>
         </div>
@@ -21,7 +21,7 @@
 <div class="col-md-8 bg-dark text-light py-2 px-2 box rounded-2 opacity-75" data-bs-theme="dark">
     <div class="card shadow p-2">
         <h2 class="mb-2 text-Warning">Editar esta Publicación</h2>
-        <form action="{{ url_for('root.edit_story', article_id=article[0]) }}" method="POST">
+        <form action="{{ url_for('admin.edit_story', article_id=article[0]) }}" method="POST">
             <div class="mb-2">
               <label for="titulo" class="form-label text-Warning">ID</label>
               <input type="text" class="form-control" name="ids" value="{{ article[0] }}">
