--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('root.home')}}">Home</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('admin.home')}}">Home</a>
           </li>
             </ul>
           </li>
@@ -31,6 +31,7 @@
     </div>
   </nav>
     <div class="container-fluid">
+      <br>
       {%block content%}
       {%endblock%}
     </div>
