--- a/src/app/templates/search_panel.html
+++ b/src/app/templates/search_panel.html
@@ -2,7 +2,7 @@
     <div class="bg-dark text-light py-3 px-3 box rounded-2 opacity-75" data-bs-theme="dark">
         <h1 class="display-6">Articulos del Blog</h1>
         <hr>
-        <form class="d-flex" role="search" method="GET" action="{{url_for('root.home')}}">
+        <form class="d-flex" role="search" method="GET" action="{{url_for('admin.home')}}">
             <fieldset>
                 <legend>Busqueda!</legend>
                 <div class="mb-3">
@@ -16,9 +16,9 @@
         <div class="col-md-12">
             <h4 class="display-8 text-center">Administracion de Articulos</h4>
             <div class="bg-dark py-2 px-2 mt-1 box rounded-2 opacity-75" data-bs-theme="dark">
-                <a type="button" class="btn btn-outline-success py-2 px-2 col-12 mb-3" href="{{url_for('root.insert')}}">Crear Articulo</a>
-                <a type="button" class="btn btn-outline-warning py-2 px-2 col-12 mb-3" href="{{url_for('root.edit')}}">Actualizar Articulo</a>
-                <a type="button" class="btn btn-outline-danger py-2 px-2 col-12 mb-3" href="{{url_for('root.delete')}}">Borrar Articulo</a>
+                <a type="button" class="btn btn-outline-success py-2 px-2 col-12 mb-3" href="{{url_for('admin.insert')}}">Crear Articulo</a>
+                <a type="button" class="btn btn-outline-warning py-2 px-2 col-12 mb-3" href="{{url_for('admin.edit')}}">Actualizar Articulo</a>
+                <a type="button" class="btn btn-outline-danger py-2 px-2 col-12 mb-3" href="{{url_for('admin.delete')}}">Borrar Articulo</a>
             </div>
         </div>
     </div>
