--- a/src/app/templates/admin/404.html
+++ b/src/app/templates/admin/404.html
@@ -3,7 +3,8 @@
 {% block content %}
 
 <div class="bg-dark text-light p-5 box rounded-2 m-3 opacity-50" data-bs-theme="dark">
-    <h1 class="display-4">El articulo no existe</h1>
+    <h1 class="display-4 text-danger">Error 404!!!</h1>
+    <h1 class="display-4 text-danger">El articulo no existe</h1>
     <a class="btn btn-outline-primary btn-lg" href="{{url_for('admin.home')}}" role="button">Regresar</a>
   </div>
 
