--- a/src/app/templates/admin/insert.html
+++ b/src/app/templates/admin/insert.html
@@ -30,10 +30,10 @@
                 <label for="categoria" class="form-label">Categoría</label>
                 <select class="form-select" name="categoria">
                     <option selected disabled>Selecciona una categoría</option>
-                    <option value="1">Tecnología</option>
-                    <option value="2">Ciencia</option>
-                    <option value="3">Literatura</option>
-                    <option value="4">Historia</option>
+                    <option value="Tecnología">Tecnología</option>
+                    <option value="Ciencia">Ciencia</option>
+                    <option value="Literatura">Literatura</option>
+                    <option value="Historia">Historia</option>
                 </select>
             </div>
             <div class="mb-2">
