--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -2,6 +2,17 @@
 
 {% block content %}
 
-{% include "search_panel.html" %}
+{% for row in cons %}
+<div class="row justify-content-center">
+  <div class="col-md-8 justify-content-center">
+    <div class="h-100 p-5 bg-body-tertiary border rounded-3 opacity-50" data-bs-theme="dark">
+      <h2 class="text-light">{{ row[1] }}</h2>
+      <p class="text-light">{{ row[2] }}</p>
+      <a class="btn btn-outline-secondary" type="button" href="{{ url_for('home.read_story', article_id=row[0]) }}">Leer mas...</a>
+    </div>
+  </div>
+</div>
+<br>
+{% endfor %}
 
 {% endblock %}
