--- a/src/app/templates/search_panel.html
+++ b/src/app/templates/search_panel.html
@@ -13,7 +13,7 @@
             </fieldset>
         </form>
         <hr>
-        <div class="col-md-12">
+        <div>
             <h4 class="display-8 text-center">Administracion de Articulos</h4>
             <div class="bg-dark py-2 px-2 mt-1 box rounded-2 opacity-75" data-bs-theme="dark">
                 <a type="button" class="btn btn-outline-success py-2 px-2 col-12 mb-3" href="{{url_for('admin.insert')}}">Crear Articulo</a>
