--- a/src/app/templates/admin/delete.html
+++ b/src/app/templates/admin/delete.html
@@ -7,7 +7,7 @@
 {% include "search_panel.html" %}
 
     <div class="col-md-8 bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
-        <h1 class="display-6 text-light">Listado de Articulos Existentes</h1>
+        <h1 class="display-6 text-light">Seleccione el/los articulos que quiera borrar...</h1>
         <!-- tabla para mostrar los contactos -->
           <div class="scrollable-table">
             <form method="POST" action="{{ url_for('admin.delete') }}"> <!-- Formulario para enviar los datos -->
