--- a/src/app/templates/admin/login.html
+++ b/src/app/templates/admin/login.html
@@ -28,7 +28,7 @@
                     <div class="register">
                         <p>No tienes cuenta? -> <a href="#">Registrate</a></p>
                     <br>
-                    <button class="boton"> <a href="#">Back</a></button>
+                    <button class="boton"> <a href="/">Back</a></button>
                     </div>
                 </form>
             </div>
