--- a/src/app/templates/admin/edit.html
+++ b/src/app/templates/admin/edit.html
@@ -9,7 +9,7 @@
     <!-- Tabla -->
     <div class="col-md-9">
         <div class="bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
-            <h1 class="display-6 text-center">Articulos Existentes</h1>
+            <h1 class="display-6 text-center">Seleccione articulo a editar...</h1>
             <div class="scrollable-table table-responsive">
                 <table border="1" class="table table-striped table-dark table-hover">
                     <thead>
