--- a/src/app/templates/blog/comment.html
+++ b/src/app/templates/blog/comment.html
@@ -5,5 +5,5 @@
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
     <br>
     <label for="exampleFormControlTextarea1" class="form-label">Comentario</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Deja aqui tu comentario"></textarea>
   </div>
