--- a/src/app/templates/blog/pawg.html
+++ b/src/app/templates/blog/pawg.html
@@ -1,4 +1,4 @@
-<nav aria-label="Page navigation example">
+<nav aria-label="Page navigation">
     <ul class="pagination justify-content-center opacity-50" data-bs-theme="dark">
       <li class="page-item"><a class="page-link" href="#">Previous</a></li>
       <li class="page-item"><a class="page-link" href="#">1</a></li>
