--- a/src/app/templates/blog/pawg.html
+++ b/src/app/templates/blog/pawg.html
@@ -1,9 +1,20 @@
 <nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center opacity-50" data-bs-theme="dark">
-      <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item"><a class="page-link" href="#">Next</a></li>
-    </ul>
-  </nav>
+  <ul class="pagination justify-content-center opacity-50" data-bs-theme="dark">
+      <!-- Botón Anterior -->
+      <li class="page-item {% if pagina_actual == 1 %}disabled{% endif %}">
+          <a class="page-link" href="?page={{ pagina_actual - 1 }}">Anterior</a>
+      </li>
+
+      <!-- Números de página -->
+      {% for num in range(1, total_paginas + 1) %}
+          <li class="page-item {% if num == pagina_actual %}active{% endif %}">
+              <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+          </li>
+      {% endfor %}
+
+      <!-- Botón Siguiente -->
+      <li class="page-item {% if pagina_actual == total_paginas %}disabled{% endif %}">
+          <a class="page-link" href="?page={{ pagina_actual + 1 }}">Siguiente</a>
+      </li>
+  </ul>
+</nav>
