--- a/src/app/templates/blog/article.html
+++ b/src/app/templates/blog/article.html
@@ -7,7 +7,9 @@
 <div class="bg-dark text-light p-5 box rounded-2 m-5 opacity-50" data-bs-theme="dark">
     <p class="lead">{{ article[2] }}, {{ article[3] }}</p>
     <hr class="my-4">
-    <p>{{ md | safe }}</p>
+    <div class="contenido-markdown">
+      {{ md | safe }}
+  </div>
     <a class="btn btn-outline-primary btn-lg" href="{{url_for('home.index')}}" role="button">Regresar</a>
   </div>
 
