--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="{{ url_for('static',filename='img/star.png')}}" type="image/png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Playgrounds</title>
     <!-- Bootstrap 5x-->
     <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css')}}">
