--- a/src/app/templates/admin/login.html
+++ b/src/app/templates/admin/login.html
@@ -1,51 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <link rel="stylesheet" href="{{ url_for('static',filename='css/login.css')}}">
-  <title>Python WebApp Login</title>
-</head>
-<body>
-    <section>
-        <div class="form-box">
-            <div class="form-value">
-                <form action="{{ url_for('admin.login')}}" method="POST">                        <!-- begin form-->
-                    <h2>Admin Access</h2>
-                    {% with messages = get_flashed_messages() %}
+{% extends "layout.html" %}
 
-                    {% if messages %}
-                    <br />
-                    {% for message in messages %}
-                    <div class="alert alert-primary alert-dismissible" role="alert">
-                        <strong>{{ message }}</strong>
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                    {% endfor %}
-                    {% endif %}
-                
-                    {% endwith %}
-                    <div class="inputbox">
-                        <ion-icon name="mail-outline"></ion-icon>
-                        <input type="text" name="username" required>
-                        <label for="">User</label>
-                    </div>
-                    <div class="inputbox">
-                        <ion-icon name="lock-closed-outline"></ion-icon>
-                        <input type="password" name="password" required>
-                        <label for="">Password</label>
-                    </div>
-                    <div class="forget">
-                        <label for=""><input type="checkbox">Recuerdame |  <a href="#">Olvide mi Contraseña</a></label>
+{% block content %}
+<div class="form-box text-center">
+  <div class="form-value" data-bs-theme="dark">
+    <main class="form-signin w-25 m-auto">
+        <form action="{{ url_for('admin.login')}}" method="POST">
+          <img class="mb-4" src="{{ url_for('static',filename='img/docker.svg')}}" alt="" width="72" height="57">
+          <h1 class="h3 mb-3 fw-normal text-light">Iniciar Sesion</h1>
+          <input type="hidden" name="csrf_token" value="{{csrf_token() }}">
+          {% with messages = get_flashed_messages() %}
 
-                    </div>
-                    <button type="submit">Log in</button>
-                </form>
-                    <div class="register">
-                        <p>No tienes cuenta? -> <a href="#">Registrate</a></p>
-                    <br>
-                    <button class="boton"> <a href="/">Back</a></button>
-                    </div>
-            </div>
-        </div>
-    </section>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+          {% if messages %}
+          <br>
+          {% for message in messages %}
+          <div class="alert alert-primary alert-dismissible" role="alert">
+            <strong>{{ message }}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          {% endfor %}
+          {% endif %}
+
+          {% endwith %}
+      
+          <div class="form-floating">
+            <input type="text" class="form-control" name="username">
+            <label>Nombre de Usuario</label>
+          </div>
+          <br>
+          <div class="form-floating">
+            <input type="password" class="form-control" name="password">
+            <label>Password</label>
+          </div>
+      
+          <div class="form-check text-start my-3">
+            <input class="form-check-input" type="checkbox" value="remember-me" id="checkDefault">
+            <label class="form-check-label" for="checkDefault">Recuerdame</label>
+          </div>
+          <button class="btn btn-outline-light w-100 py-2" type="submit">Iniciar Sesion</button>
+          
+        </form>
+        <br>
+        <button class="btn btn-outline-light w-100 py-2"><a href="/">regresar</a></button>
+        <p class="mt-5 mb-3 text-body-secondary text-center">Playgrounds 2025</p>
+    </main>
+  </div>
+</div>
+{% endblock %}
