--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -31,7 +31,7 @@
       </div>
     </div>
   </nav>
-    <div class="container-fluid">
+    <div class="container text-light">
       <br>
       {%block content%}
       {%endblock%}
