--- a/src/app/templates/blog/article.html
+++ b/src/app/templates/blog/article.html
@@ -2,16 +2,14 @@
 
 {% block content %}
 
-<h1 class="display-4 text-light m-5">{{ article[1]}}</h1>
-
-<div class="bg-dark text-light p-5 box rounded-2 m-5 opacity-50" data-bs-theme="dark">
+    <h1 class="display-4 m-5">{{ article[1]}}</h1>
     <p class="lead">{{ article[2] }}, {{ article[3] }}</p>
     <hr class="my-4">
-    <div class="contenido-markdown">
-      {{ md | safe }}
-  </div>
+    {{ md | safe }}
+    </div>
+    <br>
     <a class="btn btn-outline-primary btn-lg" href="{{url_for('home.index')}}" role="button">Regresar</a>
-  </div>
+    </div>
 
   <br>
 
